# ES117website

./: .gitignore  DEPLOYMENT_REPORT.md  README.md  gallery.html  index.html  site-config.json  team.html  wall.html
backend/: .env.example  pyproject.toml  run.sh
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/routers/: auth_routes.py  polls.py  shoutouts.py
css/: style.css
data/: quotes.json  shoutouts.json  teams.json
js/: app.js
scripts/: csv_to_json.py
